# GFT

./: CITATION.cff  README.md  deploy_llama.py  ft_llama_stage_1.py  ft_llama_stage_2.py  inference_llama_gt.py  instruction_generate_example.py  pyproject.toml  requirements.txt
examples/configs/: default.yaml
scripts/: generate_instructions.py
src/gft/data/: dataset.py
src/gft/graphs/: build_graph.py  ig_attribution.py
src/gft/inference/: deploy.py  infer_vlm.py
src/gft/models/: gnn.py
src/gft/training/: ft_stage1.py  ft_stage2.py  train_gnn.py
src/gft/utils/: metrics.py  seed.py
tests/: test_graph_build.py
